--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -22,6 +22,7 @@
     margin-bottom: 40px;
   }
   &.widget_augmit_contact_info_widget{
+    padding: 32px 40px;
     text-align: center;
     .wp-block-heading{
       margin-top: -8px;
